@@ -188,22 +188,20 @@ LAYOUT(BuildMethodsLayout, 724, 560)
 	ITEM(EditString, debug_flags, HSizePosZ(264, 284).TopPosZ(132, 19))
 	ITEM(Label, dv___23, SetLabel(t_("Release fixed flags:")).RightPosZ(176, 100).TopPosZ(132, 19))
 	ITEM(EditString, release_flags, RightPosZ(4, 172).TopPosZ(132, 19))
-	UNTYPED(path, LeftPosZ(160, 184).VSizePosZ(156, 140))
-	UNTYPED(include, HSizePosZ(348, 192).VSizePosZ(156, 140))
-	UNTYPED(lib, RightPosZ(4, 184).VSizePosZ(156, 140))
-	ITEM(LabelBox, dv___28, SetLabel(t_("Remote host")).HSizePosZ(164, 4).BottomPosZ(40, 96))
-	ITEM(Label, dv___29, SetLabel(t_("&Remote host[:port]:")).LeftPosZ(174, 96).BottomPosZ(98, 19))
+	ITEM(TabCtrl, paths, HSizePosZ(160, 4).VSizePosZ(156, 140))
+	ITEM(LabelBox, dv___26, SetLabel(t_("Remote host")).HSizePosZ(164, 4).BottomPosZ(40, 96))
+	ITEM(Label, dv___27, SetLabel(t_("&Remote host[:port]:")).LeftPosZ(174, 96).BottomPosZ(98, 19))
 	ITEM(EditField, remote_host, HSizePosZ(272, 328).BottomPosZ(99, 19))
-	ITEM(Label, dv___31, SetLabel(t_("&OS type:")).LeftPosZ(174, 80).BottomPosZ(74, 19))
+	ITEM(Label, dv___29, SetLabel(t_("&OS type:")).LeftPosZ(174, 80).BottomPosZ(74, 19))
 	ITEM(DropList, remote_os, HSizePosZ(272, 326).BottomPosZ(75, 19))
-	ITEM(Label, dv___33, SetLabel(t_("File &access:")).LeftPosZ(174, 78).BottomPosZ(51, 19))
+	ITEM(Label, dv___31, SetLabel(t_("File &access:")).LeftPosZ(174, 78).BottomPosZ(51, 19))
 	ITEM(DropList, remote_file_access, HSizePosZ(272, 326).BottomPosZ(53, 19))
 	UNTYPED(remote_path_map, RightPosZ(12, 308).BottomPosZ(49, 71))
 	ITEM(Button, setdefault, SetLabel(t_("&Set as default")).LeftPosZ(4, 152).BottomPosZ(40, 22))
 	ITEM(Button, ok, SetLabel(t_("OK")).RightPosZ(76, 64).BottomPosZ(6, 22))
 	ITEM(Button, cancel, SetLabel(t_("Cancel")).RightPosZ(8, 64).BottomPosZ(6, 22))
 	ITEM(Option, use_target, SetLabel(t_("Store all target files\nin the same directory")).LeftPosZ(4, 148).BottomPosZ(74, 28))
-	ITEM(Label, dv___40, SetLabel(t_("Script file:")).LeftPosZ(4, 54).BottomPosZ(133, 19))
+	ITEM(Label, dv___38, SetLabel(t_("Script file:")).LeftPosZ(4, 54).BottomPosZ(133, 19))
 	ITEM(EditField, scriptfile, LeftPosZ(4, 152).BottomPosZ(113, 19))
 	UNTYPED(linkmode_lock, LeftPosZ(4, 148).TopPosZ(384, 20))
 END_LAYOUT
@@ -533,4 +531,3 @@ LAYOUT(TppLayout, 148, 284)
 	ITEM(Button, ok, SetLabel(t_("OK")).LeftPosZ(8, 64).TopPosZ(252, 24))
 	ITEM(Button, cancel, SetLabel(t_("Cancel")).LeftPosZ(76, 64).TopPosZ(252, 24))
 END_LAYOUT
-
